# pytest-vcrpandas

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  README.rst  requirements-dev.txt  requirements.txt  setup.cfg
docs/: conf.py  index.rst
docs/notes/: quickstart.rst
docs/src/: cli.rst
pytest_vcrpandas/: __init__.py  cli.py
tests/: conftest.py  jsonplaceholder.py  test_vcrpandas.py
tests/client_tester/: test_jsonplaceholder.py
